--- a/classificacao.html
+++ b/classificacao.html
@@ -7,6 +7,6 @@
 	
 	</head>
 	<body>
-		<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRoWDn75Q0w1VqYkQOJJUnOyxxFdIDa0OVcLezagHBoFrFn2kxyEaRz64CYFmcz4_6cP3RN4YnLM-cb/pubhtml?gid=0&amp;single=false&amp;widget=true&amp;headers=false" style="width:100%;height:100%;"></iframe>
+		<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRoWDn75Q0w1VqYkQOJJUnOyxxFdIDa0OVcLezagHBoFrFn2kxyEaRz64CYFmcz4_6cP3RN4YnLM-cb/pubhtml?gid=0&amp;single=false&amp;widget=true&amp;headers=false" style="width:100%;height:1024px;"></iframe>
 	</body>
 </html>
